# PEA

./: .gitignore  AlgorytmTS.cpp  AntColony.h  CMakeLists.txt  CmakeLists.txt  Graph.hpp  KaplonKiler3000.cpp  Node.hpp  README.md  Sprawozdanie 1.docx  Sprawozdanie.xlsx  build\Wyniki\finalresoult.csv  tmp.py  tsp_converter.py
Problem_1/: .gitignore
Problem_1/Dane/ASYM30/: GRAF9_30.txt
Problem_1/Dane/SYM100/: GRAF12_100.txt  GRAF9_100.txt
Problem_1/Dane/SYM30/: GRAF10_30.txt
Problem_1/Wyniki/: bfsresoult.csv
Proj_1/: PEA_Sprawozdanie_1.tex  Proj_1.cpp  Proj_1.ipynb  Sprawozdanie 1.docx  TSB_P1  TSB_P1.cpp  TSP1.cpp  config.json  ~$rawozdanie 1.docx
Proj_1/Dane/ASYM100/: GRAF10_100.txt
Proj_1/Dane/ASYM30/: GRAF12_30.txt
Proj_1/Dane/ASYM60/: GRAF13_60.txt  GRAF14_60.txt
Proj_1/Dane/SYM100/: GRAF13_100.txt
Proj_1/Dane/SYM30/: GRAF8_30.txt
Proj_1/Dane/SYM60/: GRAF9_60.txt
Proj_1/Wyniki/: bfsresoult.csv  nearest-neighbourresoult.csv  randomresoult.csv
Proj_1/src/tables/: bfsresoult.tex  brute-forceresoult.tex  dfsresoult.tex  leastCostresoult.tex  nearest-neighbourresoult.tex
Proj_2/: PEA_Sprawozdanie_2.out  PEA_Sprawozdanie_2.tex  Proj_2.cpp  Proj_2.ipynb
Proj_2/src/tables/: AnAlpha.tex  AnAlphaTime.tex  AnEpoch.tex  AnEpochTime.tex  AnNeigMet.tex  AnNeigMetTime.tex  AnStart.tex  AnStartTime.tex  AnStartVal.tex  AnStartValTime.tex  AoAB.tex  AoABTime.tex  AoFeroMet.tex  AoFeroMetTime.tex  AoRho.tex  (+15 more)
TspLib/: converter_att.py  converter_euc.py  converter_full.py
TspLib/ASYM/: Aopt.txt  opt.txt
TspLib/SYM/: opt.txt
include/: Graph.cpp
